<resources>
    <string name="app_name">51get共享出行</string>
    <string name="saoma">扫码租车</string>
    <string name="user_name">未登陆</string>
    <string name="sure_rent">确定租车</string>
    <string name="to_charge">去充值</string>
    <string name="to_pay">去付款</string>
    <string name="admin"> 请输入手机号</string>
    <string name="register"> 注    册</string>
    <string name="refer"> 提  交</string>

    <string name="getCode">获取验证码</string>
    <string name="Input_Code">请输入验证码</string>

    <string name="first_InputPass"> 请输入密码</string>
    <string name="second_InputPass"> 请再输入一次</string>
    <string name="user_infor">身份认证</string>
    <string name="user_route_title">我的行程</string>
    <string name="user_route_mes_title">订单详情</string>

    <string name="startTime">2016-2-23 17:12:12</string>
    <string name="endTime"> 2016-2-23 17:12:12</string>

    <string name="text_share_info">我正在使用51get共享出行，你也来看看吧</string>
    <string name="text_share_awesome">51get共享出行</string>
    <string name="agreement">  《51get租车服务条款》</string>
    <string name="used_time">使用时间 : 0时0分:0秒</string>
    <string name="release_always">剩余里程 : 15公里</string>
    <string name="reback_money">保证金充值后可以全额退款</string>
    <string name="yajin_reback">为了确保合规用车，需要缴纳押金\n可随时退回付款账户</string>
    <string name="suggest">请写下您的宝贵意见,我们会及时改正</string>

    <string name="app_id">输入您讯飞的appid</string>
    <string name="gps_dialog">打开GPS提升定位准确度，方便查询附近车辆，现在开启？</string>
    <string name="infor_reminder">温馨提示: 所属校区是根据您的位置信息，读取附近我们服务范围内的学校信息</string>
    <string name="about_1"> 51get共享出行是江苏大学学生创业团队共同研制的共享电动车平台，采用时下流行的分时租赁模式，用户只需要通过app扫描即可实现智能解锁，随取随用</string>
    <string name="about_2">镇江市江苏大学创业孵化基地\n客服电话：18852852276 \n微信公众号：ujs-51get</string>
    <string name="bike_message_text1">租车不满15分钟只需要1元</string>
    <string name="use_explain">1. 打开51get共享出行APP，在地图上查找符合自己出行里程车辆的位置。\n\n2. 找到车辆后扫码租车。\n\n3. 待蓝牙连接成功后点击解锁按钮。\n\n4. 按照提示长按开锁按钮，待听到“滴”声后即可正常使用车辆。</string>
    <string name="service_argument">\n一、51get的权利义务\n\n\n
1、51get向用户交付设备齐全的租赁车辆，并对承租人是否具有相应的行为能力进行合理审查，车辆所有权归51get所有。\n
2、车辆租赁期间若发生交通事故，51get不承担任何责任，需由用户自行负责。\n
3、51get免费提供租赁车辆保养及月检、合理使用中出现的故障维修。\n
4、51get不承担由用户使用租赁车辆过程中造成的一切法律责任或不利后果。\n
5、51get拒绝接受租赁车辆在租赁期间发生交通违章的处罚，并有权将账号注册的用户作为责任人提交公安交通管理部门处理。\n
6、51get收取租金及押金。\n
7、51get有权收取本协议约定的租赁费用，若用户未支付或未足额支付租赁费用，51get有权从用户提供的押金中扣除，不足部分有权向用户追偿。\n
8、51get有权代用户向相关保险公司投保，费用由51get承担。保险赔付程序由用户自行处理，51get可以协助用户处理相关赔偿事宜。\n
9、51get根据客观情况变化，可以随时终止本协议，但应当及时退还押金。\n\n
二、用户的权利义务\n\n
1、用户应当提供真实的个人租赁信息，个人信息如有变动应当及时更新注册信息，否则由此造成的损失由用户自己承担。\n
2、安全使用租赁车辆，自觉承担租赁后车辆不合理使用造成的相关费用支出（例如：车辆外观损坏、车架钢圈碰撞变形等）。\n
3、用户承担车辆租赁期间发生的一切事故的损失，包括但不限于用户非合理骑行、交给第三人骑行、驶出校园区域外发生的交通和非交通事故、车辆被盗抢、第三者责任等损失，均由用户本人承担法律责任。\n
4、在租赁期间拥有租赁车辆的合法使用权并享有51get为保障租赁车辆使用功能所提供的服务。\n
5、使用租赁车辆应遵守相关法律法规，如用户违反交通法律法规自行承担交通处罚。\n
6、妥善保管租赁车辆，配合51get为保障车辆性能的各项工作。\n
7、承租期间，用户不得买卖、抵押、质押、转租、转借租赁车辆，不得擅自变动、修理、添改租赁车辆任何部位或部件。\n
8、承担因使用不合理造成租赁车辆修理、停驶的损失，承担丢失租赁车辆及牌证补办费用及停驶期间租金。\n
9、用户在使用租用车辆期间不得有载人、闯红灯等违法违规行为，否则由此造成任何后果与镇江云尚文化传播有限公司无关，由用户自己负责和承担后果。\n
10、签订本协议之时交纳押金，协议履行完毕之日起用户提出押金提现5日内退还押金至用户提供的相关账户内，特殊情况除外。\n
11、按照本协议约定按时足额支付租赁费用。\n


\n\n\n
三、免责条款\n\n
51get对下列行为免责：\n信息网络正常的设备维护，信息网络连接故障，电脑、通讯或其他系统的故障，电力故障，罢工，劳动争议，暴乱，起义，骚乱，生产力或生产资料不足，火灾，洪水，风暴，爆炸，战争，政府行为，司法行政机关的命令或第三方的不作为而造成的不能服务或延迟服务。\n\n
四、违约条款\n\n
本协议的效力及纠纷的解决，适用于中华人民共和国法律。若用户和51get之间发生任何纠纷或争议，首先应当友好协商解决，协商不成的，用户同意将纠纷或争议提交至51get所在地有管辖权的人民法院管辖。\n
五、特别提醒\n
1、51get郑重提醒用户注意本协议中免除51get责任和限制用户权利的条款，请用户仔细阅读，自主考虑风险。依据相关法律法规，未满16周岁的未成年人不得驾驶电动自行车。\n
2、双方在线上达成租车协议后，用户应当自行检查所承租车辆的刹车等性能是否良好。用户在取车地发现承租车辆存在刹车等性能故障，应当立即向51get提出异议，并在取车地现场等待维修人员确认、处理，用户在此期间不得驾驶该车辆离开取车地点，否则，视为用户认可其所承租车辆性能良好，51get也已向用户完成交付所承租车辆。承租期间，由车辆性能所造成的任何问题与镇江云尚文化传播有限公司无关，由用户自己负责。\n
3、本协议的任何条款无论因何种原因无效或不具可执行性，其余条款仍有效，对双方具有约束力。\n\n
六、其它\n\n
1、用户提交租赁或解除租赁的申请，获得51get确认通过，租赁协议即刻生效。\n
2、本协议最终解释权归镇江云尚文化传播有限公司所有。\n
</string>
    <string name="register_agreement">\t\t51get租赁操作系统适用于安卓或苹果版智能手机，请用户仔细阅读本注册服务相关条款。\n\n
\t\t用户勾选“我已了解并接受《注册服务条款》”并点击【立即注册】按钮，注册信息提交并审核通过后即成为我们的会员，本服务条款即构成了对双方具有法律约束力的文件。在此特别提醒用户在注册成为会员之前，请认真阅读全部注册服务条款，确保用户充分理解本协议中各条款。请用户审慎阅读并选择接受或不接受本协议。用户的注册、登陆、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。本协议可由我们随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知，用户可在本APP中查询最新版协议条款。在修改协议条款后，如果用户不接受修改后的条款，请立即停止使用我们提供的服务，用户继续使用我们提供的服务将被视为接受修改后的协议。\n\n
\t\t具体内容如下：\n\n
1、用户在使用51get租赁服务前需要注册一个“51get”账号，此账号应当使用自己本人真实姓名办理的手机号码绑定注册，注册时应当如实填写相关信息进行验证。如用户的资料发生变更，应及时更新用户的资料，以使之真实、及时、完整和准确。我们可以根据用户的需求或产品需要对账号注册及绑定方式进行变更，而无需事先通知用户。\n
2、鉴于“51get”账号的绑定注册方式，用户同意我们在注册时将允许用户的手机号码及手机设备识别码等信息用于注册。\n
3、在用户注册及使用本服务时，我们会搜集能识别用户身份或地理位置等信息以便我们可以在必要时联系用户，为用户提供更好的使用体验或其它服务。我们搜集的信息包括但不限于用户的身份证及学生证信息，我们承诺保护访问者和用户的隐私。另外，在不透露用户隐私资料的前提下，我们将对整个用户数据库进行分析并对用户数据库进行商业上的利用。\n
4、除非本隐私和Cookie政策规定，否则，我们将保留用户的信息直到您取消帐户或者直到用户的帐户已闲置了一年。如果您希望取消帐户或要求我们不再使用的信息，请联系我们的客服人员。\n
5、用户理解并同意，在协议履行过程中存在违法违规行为，我们有权对用户进行处罚，同时，保留向有关部门举报的权利，由此产生的一切法律责任由用户自己承担。\n
6、、用户理解并同意，如因自己违反本协议规定，造成的一切不利后果或损失（包括律师费、诉讼费等损失），由用户自己承担。\n
7、我们提供的服务中可能包括新闻、优惠和促销活动等信息，用户同意在使用过程中接收我们或第三方提供的上述信息，也可以在任何时候选择不接受。除法律法规明确规定外，用户应自行对依据上述信息可能发生的交易负责，对用户因依上述信息而遭受的损失或损害，51get不承担任何责任。\n
8、我们对下列行为免责：信息网络正常的设备维护，信息网络连接故障，电脑、通讯或其他系统的故障，电力故障，罢工，劳动争议，暴乱，起义，骚乱，生产力或生产资料不足，火灾，洪水，风暴，爆炸，战争，政府行为，司法行政机关的命令或第三方的不作为而造成的不能服务或延迟服务。\n
9、用户所注册的我们账号包含押金和租金两个账户。如果用户完成交易后申请保证金提现，我们于五个工作日后将押金退到用户所提供的支付宝账号，但是租金不提供提现服务。如果用户所注册账号中押金账户或租金账户余额不足时，用户将无法正常租赁我们提供的车辆。\n
10、我们郑重提醒用户注意本协议中免除我们责任和限制用户权利的条款，请用户仔细阅读，自主考虑风险。依据相关法律法规，未满16周岁的未成年人不得驾驶电动自行车。\n
11、本协议的效力、解释及纠纷的解决，适用于中华人民共和国法律，如无相关法律规定的，则应参照通用国内商业惯例或行业惯例。若用户和我们之间发生任何纠纷或争议，首先应当友好协商解决，协商不成的，用户同意将纠纷或争议提交至我们所在地有管辖权的人民法院管辖。\n
12、本协议的任何条款无论因何种原因无效或不具可执行性，其余条款仍有效，对双方具有约束力。\n
13、本服务条款的解释权归镇江云尚文化传播有限公司所有，据苹果公司免责条款特此声明：该应用注册及隐私协议与苹果公司无关。\n

</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
