<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/baseColor">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:background="@color/baseColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_title"
            style="@style/titleStyle"
            android:text="注册"/>

        <Button
            android:id="@+id/left_back"
            style="@style/backStyle"
            android:layout_alignTop="@+id/left_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_circle_white"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_circle_white"

            android:id="@+id/t"
            android:text="账号 : "
            android:textColor="@color/black"
            android:gravity="center_vertical|end"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_Bottom_height"
            android:hint="@string/admin"
            android:layout_weight="4"

            android:background="@drawable/button_circle_white"

            android:id="@+id/login_Admin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_circle_white"

        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_circle_white"
            android:text="密码 : "
            android:textColor="@color/black"
            android:gravity="center_vertical|end"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_Bottom_height"
            android:background="@drawable/button_circle_white"
            android:hint="@string/first_InputPass"
            android:inputType="textPassword"
            android:layout_weight="4"
            android:id="@+id/frist_Pass"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:background="@drawable/button_circle_white"

        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_circle_white"
            android:text="密码 : "
            android:textColor="@color/black"
            android:gravity="center_vertical|end"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_Bottom_height"
            android:background="@drawable/button_circle_white"
            android:hint="@string/second_InputPass"
            android:inputType="textPassword"
            android:layout_weight="4"
            android:id="@+id/second_Pass"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:background="@drawable/button_circle_white"

        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_Bottom_height"
            android:background="@drawable/button_circle_white"
            android:hint="@string/Input_Code"
            android:inputType="textPassword"
            android:layout_weight="4"
            android:id="@+id/code"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_circle_white"
            android:id="@+id/get_code"
            android:text="@string/getCode"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_weight="0.5" />


    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Login_button"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:textColor="@color/baseColor"
        android:text="@string/register"
        android:textSize="@dimen/text_size_content"
        android:background="@drawable/button_circle_white"

        />
</LinearLayout>
